<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFFF1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="serif"
            android:text="@string/intro"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="serif"
            android:text="@string/twoPoints"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="serif"
            android:text="@string/noPoints"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/candidateName"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/candidate_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:hint="@string/nameHint"
                android:inputType="textCapWords"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/questionOne"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_edges">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/noHands" />

            <RadioButton
                android:id="@+id/question_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/grabHandrail" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/slide" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/questionTwo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/questionTwo_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:fontFamily="serif"
            android:hint="@string/answerHint"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/questionThree"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="serif"
            android:text="@string/selectTwo"
            android:textSize="14sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_edges"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clutteredDesk" />

            <CheckBox
                android:id="@+id/checkbox_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/brokenFloor" />

            <CheckBox
                android:id="@+id/checkbox_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/chippedPaint" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/questionFour"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_edges">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hangNotice" />

            <RadioButton
                android:id="@+id/question_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createBarrier" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drizzleFloor" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/questionFive"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_edges">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holder_tipUp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onDesk" />

            <RadioButton
                android:id="@+id/question_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holder_tipDown" />
        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_gray"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="submitAnswers"
            android:text="@string/submit"
            android:textSize="20sp" />


    </LinearLayout>

</ScrollView>